# regex-base

./: .travis.yml  ChangeLog.md  Makefile  README.md  cabal.haskell-ci  package.conf.in  regex-base.cabal
.github/workflows/: haskell-ci.yml
Text/Regex/: Base.hs
Text/Regex/Base/: Context.hs  Impl.hs  RegexLike.hs
src/Text/Regex/: Base.hs
src/Text/Regex/Base/: Context.hs  Impl.hs  RegexLike.hs
test/: IntroductoryExample.goldplate  IntroductoryExample.hs  Makefile
