cabal-version:          1.12
name:                   regex-base
version:                0.94.0.0

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2006, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             hvr@gnu.org
bug-reports:            https://github.com/hvr/regex-base
synopsis:               Replaces/Enhances "Text.Regex"
category:               Text
description:
  This package provides the common interface API that is implemented by packages such as
  .
  * <//hackage.haskell.org/package/regex-posix regex-posix>
  .
  * <//hackage.haskell.org/package/regex-pcre regex-pcre>
  .
  * <//hackage.haskell.org/package/regex-parsec regex-parsec>
  .
  * <//hackage.haskell.org/package/regex-tdfa regex-tdfa>
  .
  * <//hackage.haskell.org/package/regex-dfa regex-dfa>
  .

extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/hvr/regex-base.git

library
  hs-source-dirs: src

  exposed-modules:
      Text.Regex.Base
      Text.Regex.Base.RegexLike
      Text.Regex.Base.Context
      Text.Regex.Base.Impl

  other-modules:
      Paths_regex_base

  default-language: Haskell2010
  default-extensions:
      MultiParamTypeClasses
      FunctionalDependencies
      TypeSynonymInstances
      FlexibleInstances
      FlexibleContexts

  if impl(ghc >= 7.4)
    default-extensions: Safe
    build-depends: containers >= 0.4.2.1
                 , bytestring >= 0.9.2.1

  build-depends: base       >= 4.3 && < 4.14
               , mtl        >= 1.1 && < 2.3
               , containers >= 0.4 && < 0.7
               , bytestring >= 0.9 && < 0.11
               , array      >= 0.3 && < 0.6
               , text       >= 1.2.3 && < 1.3

  if !impl(ghc >= 8)
      build-depends: fail == 4.9.*

  ghc-options: -Wall -O2
