cabal-version:          1.12
name:                   regex-base
version:                0.94.0.0

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2006, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             hvr@gnu.org
homepage:               https://wiki.haskell.org/Regular_expressions
bug-reports:            https://github.com/hvr/regex-base/issues
synopsis:               Common "Text.Regex.*" API for Regex matching
category:               Text
description:
  This package doesn't provide the ability to do regex matching, but instead provides the type-classes that constitute the abstract API that is implemented by @regex-*@ backends such as
  .
  * <//hackage.haskell.org/package/regex-posix regex-posix>
  .
  * <//hackage.haskell.org/package/regex-parsec regex-parsec>
  .
  * <//hackage.haskell.org/package/regex-dfa regex-dfa>
  .
  * <//hackage.haskell.org/package/regex-tdfa regex-tdfa>
  .
  * <//hackage.haskell.org/package/regex-pcre regex-pcre>
  .
  See also <https://wiki.haskell.org/Regular_expressions> for more information.

extra-source-files:
  ChangeLog.md

tested-with:
  GHC ==7.0.2
   || ==7.2.2
   || ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.3
   || ==8.10.1

source-repository head
  type:     git
  location: https://github.com/hvr/regex-base.git

library
  hs-source-dirs: src

  exposed-modules:
      Text.Regex.Base
      Text.Regex.Base.RegexLike
      Text.Regex.Base.Context
      Text.Regex.Base.Impl

  other-modules:
      Paths_regex_base

  default-language: Haskell2010
  other-extensions:
      MultiParamTypeClasses
      FunctionalDependencies
      TypeSynonymInstances
      FlexibleInstances
      FlexibleContexts

  if impl(ghc >= 7.4)
    default-extensions: Safe
    build-depends: containers >= 0.4.2.1
                 , bytestring >= 0.9.2.1

  build-depends: base       >= 4.3 && < 4.16
               , mtl        >= 1.1 && < 2.3
               , containers >= 0.4 && < 0.7
               , bytestring >= 0.9 && < 0.11
               , array      >= 0.3 && < 0.6
               , text       >= 1.2.3 && < 1.3

  if !impl(ghc >= 8)
      build-depends: fail == 4.9.*

  ghc-options: -Wall -O2
