cabal-version:          1.24
name:                   regex-base
version:                0.94.0.3

build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2006, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             Andreas Abel
homepage:               https://wiki.haskell.org/Regular_expressions
bug-reports:            https://github.com/haskell-hvr/regex-base/issues
synopsis:               Common "Text.Regex.*" API for Regex matching
category:               Text
description:
  This package does not provide the ability to do regular expression matching.
  Instead, it provides the type classes that constitute the abstract API
  that is implemented by @regex-*@ backends such as:
  .
  * <https://hackage.haskell.org/package/regex-posix regex-posix>
  .
  * <https://hackage.haskell.org/package/regex-parsec regex-parsec>
  .
  * <https://hackage.haskell.org/package/regex-dfa regex-dfa>
  .
  * <https://hackage.haskell.org/package/regex-tdfa regex-tdfa>
  .
  * <https://hackage.haskell.org/package/regex-pcre regex-pcre>
  .
  See also <https://wiki.haskell.org/Regular_expressions> for more information.

extra-doc-files:
  ChangeLog.md
  README.md

tested-with:
  GHC == 9.12.1
  GHC == 9.10.1
  GHC == 9.8.4
  GHC == 9.6.6
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  type:     git
  location: https://github.com/haskell-hvr/regex-base.git

source-repository this
  type:     git
  location: https://github.com/haskell-hvr/regex-base.git
  tag:      v0.94.0.3

library
  hs-source-dirs: src

  exposed-modules:
      Text.Regex.Base
      Text.Regex.Base.RegexLike
      Text.Regex.Base.Context
      Text.Regex.Base.Impl

  other-modules:
      Paths_regex_base

  default-language:
      Haskell2010

  default-extensions:
      NoImplicitPrelude
      Safe
      MultiParamTypeClasses
      FunctionalDependencies
      TypeSynonymInstances
      FlexibleInstances
      FlexibleContexts

  build-depends:
        base        >= 4.9   && < 5
      , containers  >= 0.5   && < 1
      , bytestring  >= 0.10  && < 1
      , array       >= 0.5   && < 1
      , text        >= 1.2.3 && < 1.3 || >= 2.0 && < 3

  ghc-options:
      -Wall
      -Wcompat
